# ombre

./: .gitignore  mkdocs.yml  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/: README.md  observation.md  spectra.md  todo.md
docs/notebooks/: GJ-3053.ipynb  GJ436.ipynb  GJ9827-b.ipynb  GJ9827.ipynb  HAT-P-1.ipynb  HAT-P-12.ipynb  HAT-P-17.ipynb  HAT-P-18.ipynb  HAT-P-26.ipynb  HAT-P-3.ipynb  HAT-P-32.ipynb  HAT-P-38.ipynb  HAT-P-41.ipynb  HAT-P-7.ipynb  HATS-7.ipynb  HD-149026.ipynb  HD195689.ipynb  HD93396.ipynb  K2-24.ipynb  LHS-1140.ipynb  WASP-101.ipynb  WASP-107.ipynb  WASP-127.ipynb  WASP-17.ipynb  WASP-178.ipynb  WASP-29.ipynb  WASP-31.ipynb  WASP-33.ipynb  WASP-39.ipynb  WASP-52.ipynb  WASP-6.ipynb  WASP-63.ipynb  WASP-67.ipynb  WASP-69.ipynb  WASP-74.ipynb  WASP-76.ipynb  WASP-79.ipynb  WASP-80.ipynb  (+4 more)
notebooks/: 55-Cancri-e.ipynb  GJ-3053.ipynb  GJ1132.ipynb  GJ1214.ipynb  GJ3470.ipynb  GJ436.ipynb  GJ9827.ipynb  HAT-P-1.ipynb  HAT-P-11.ipynb  HAT-P-12.ipynb  HAT-P-17.ipynb  HAT-P-18.ipynb  HAT-P-26.ipynb  HAT-P-3.ipynb  HAT-P-32.ipynb  HAT-P-38.ipynb  HAT-P-7.ipynb  HAT-P-70B.ipynb  HATS-7.ipynb  HD-134004.ipynb  HD-195689.ipynb  HD165459.ipynb  HD195689.ipynb  HD93396.ipynb  HD97658.ipynb  K2-18-b.ipynb  K2-24.ipynb  K2-93.ipynb  KELT-1.ipynb  KELT-7.ipynb  Kepler-79.ipynb  LHS-1140.ipynb  LHS-281.ipynb  TRAPPIST1.ipynb  Untitled.ipynb  Untitled2.ipynb  Untitled3.ipynb  WASP-107.ipynb  WASP-117.ipynb  WASP-12.ipynb  (+37 more)
ombre/: __init__.py  methods.py  observation.py  spec.py  transit.py
tests/: test_ombre.py  test_spectra.py
(+327 files in other folders)
